[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/Inventory/Input_Text.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/Inventory/Inventory Manager.gd" type="Script" id=3]
[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/Inventory/Input_Text_Multiline.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/Inventory/ItemType_Selection.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/Inventory/Number_Counter.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/Inventory/Checkbox_Template.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/Inventory/Icon_Template.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/Database_Manager/Data/Icons/Chode.png" type="Texture" id=9]
[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/Inventory/Description_Container.tscn" type="PackedScene" id=10]

[node name="Inventory_Manager" type="Control" groups=["Item_Manager"]]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="VBox1" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox1" type="HBoxContainer" parent="VBox1"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="Center1" type="CenterContainer" parent="VBox1/HBox1"]
margin_right = 720.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="SaveChanges" type="Button" parent="VBox1/HBox1"]
margin_left = 724.0
margin_right = 822.0
margin_bottom = 20.0
text = "Save Changes"

[node name="SaveNewItem" type="Button" parent="VBox1/HBox1"]
visible = false
margin_left = 808.0
margin_right = 916.0
margin_bottom = 20.0
text = "Save New Item"

[node name="AddNewItem" type="Button" parent="VBox1/HBox1"]
margin_left = 826.0
margin_right = 930.0
margin_bottom = 20.0
text = "Add New Item"

[node name="DeleteSelectedItem" type="Button" parent="VBox1/HBox1"]
margin_left = 934.0
margin_right = 1024.0
margin_bottom = 20.0
text = "Delete Item"

[node name="Cancel" type="Button" parent="VBox1/HBox1"]
visible = false
margin_left = 970.0
margin_right = 1024.0
margin_bottom = 20.0
text = "Cancel"

[node name="HBox2" type="HBoxContainer" parent="VBox1"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -5

[node name="Scroll1" type="ScrollContainer" parent="VBox1/HBox2"]
margin_right = 187.0
margin_bottom = 558.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Table_Buttons" type="VBoxContainer" parent="VBox1/HBox2/Scroll1"]
margin_right = 175.0
margin_bottom = 1778.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel1" type="PanelContainer" parent="VBox1/HBox2"]
margin_left = 182.0
margin_right = 1024.0
margin_bottom = 558.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="VBox1/HBox2/Panel1"]
margin_left = 7.0
margin_top = 7.0
margin_right = 835.0
margin_bottom = 551.0
color = Color( 0, 0, 0, 0.0823529 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="VBox1/HBox2/Panel1"]
margin_left = 7.0
margin_top = 7.0
margin_right = 835.0
margin_bottom = 551.0

[node name="HBox1" type="HBoxContainer" parent="VBox1/HBox2/Panel1/VBoxContainer2"]
margin_right = 828.0
margin_bottom = 258.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox1" type="VBoxContainer" parent="VBox1/HBox2/Panel1/VBoxContainer2/HBox1"]
margin_right = 407.0
margin_bottom = 258.0
size_flags_horizontal = 3

[node name="Key" parent="VBox1/HBox2/Panel1/VBoxContainer2/HBox1/VBox1" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 407.0
margin_bottom = 54.0
label_text = "Item Name"

[node name="Type" parent="VBox1/HBox2/Panel1/VBoxContainer2/HBox1/VBox1" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 58.0
margin_right = 407.0
margin_bottom = 107.0
label_text = "Item Type"
main_tab_group = "Item_Manager"
selection_table_name = "Item_Type"

[node name="Cost" parent="VBox1/HBox2/Panel1/VBoxContainer2/HBox1/VBox1" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 111.0
margin_right = 407.0
margin_bottom = 155.0
label_text = "Item Cost"

[node name="HBox1" parent="VBox1/HBox2/Panel1/VBoxContainer2/HBox1/VBox1/Cost" index="0"]
margin_right = 407.0

[node name="Label" parent="VBox1/HBox2/Panel1/VBoxContainer2/HBox1/VBox1/Cost/HBox1" index="0"]
text = "Item Cost"

[node name="Input" parent="VBox1/HBox2/Panel1/VBoxContainer2/HBox1/VBox1/Cost/HBox1" index="1"]
margin_right = 346.0
text = "1"

[node name="VBox1" parent="VBox1/HBox2/Panel1/VBoxContainer2/HBox1/VBox1/Cost/HBox1" index="2"]
margin_left = 350.0
margin_right = 407.0

[node name="Add_Button" parent="VBox1/HBox2/Panel1/VBoxContainer2/HBox1/VBox1/Cost/HBox1/VBox1" index="0"]
margin_right = 57.0

[node name="Sub_Button" parent="VBox1/HBox2/Panel1/VBoxContainer2/HBox1/VBox1/Cost/HBox1/VBox1" index="1"]
margin_right = 57.0

[node name="SellValue" parent="VBox1/HBox2/Panel1/VBoxContainer2/HBox1/VBox1" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 159.0
margin_right = 407.0
margin_bottom = 203.0
label_text = "Sell Value"

[node name="CanSell" parent="VBox1/HBox2/Panel1/VBoxContainer2/HBox1/VBox1" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 207.0
margin_right = 407.0
margin_bottom = 232.0
label_text = "Can Sell Item?"

[node name="Label" parent="VBox1/HBox2/Panel1/VBoxContainer2/HBox1/VBox1/CanSell" index="0"]
margin_right = 201.0
margin_bottom = 25.0
text = "Can Sell Item?"

[node name="Input" parent="VBox1/HBox2/Panel1/VBoxContainer2/HBox1/VBox1/CanSell" index="1"]
margin_left = 205.0
margin_right = 407.0
margin_bottom = 25.0

[node name="Panel" type="Panel" parent="VBox1/HBox2/Panel1/VBoxContainer2/HBox1"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 411.0
margin_right = 416.0
margin_bottom = 258.0
rect_min_size = Vector2( 5, 0 )

[node name="VBox2" type="VBoxContainer" parent="VBox1/HBox2/Panel1/VBoxContainer2/HBox1"]
margin_left = 420.0
margin_right = 828.0
margin_bottom = 258.0
size_flags_horizontal = 3

[node name="IconPath" parent="VBox1/HBox2/Panel1/VBoxContainer2/HBox1/VBox2" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 408.0
margin_bottom = 154.0
label_text = "Icon"
main_tab_group = "Item_Manager"

[node name="Label" parent="VBox1/HBox2/Panel1/VBoxContainer2/HBox1/VBox2/IconPath" index="0"]
margin_right = 408.0
text = "Icon"

[node name="HBoxContainer" parent="VBox1/HBox2/Panel1/VBoxContainer2/HBox1/VBox2/IconPath" index="1"]
margin_right = 408.0

[node name="Input" parent="VBox1/HBox2/Panel1/VBoxContainer2/HBox1/VBox2/IconPath/HBoxContainer" index="1"]
margin_right = 279.0
text = "A yellow \"C\" with a slash through from top to bottom. A smaller, yellow \"H\" is placed in the opening of the \"C\""

[node name="ColorRect" parent="VBox1/HBox2/Panel1/VBoxContainer2/HBox1/VBox2/IconPath/HBoxContainer" index="2"]
margin_left = 283.0
margin_right = 408.0

[node name="TextureButton" parent="VBox1/HBox2/Panel1/VBoxContainer2/HBox1/VBox2/IconPath/HBoxContainer/ColorRect" index="0"]
texture_normal = ExtResource( 9 )

[node name="Description" parent="VBox1/HBox2/Panel1/VBoxContainer2/HBox1/VBox2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 158.0
margin_right = 408.0
margin_bottom = 258.0
label_text = "Item Description"

[node name="Panel" type="Panel" parent="VBox1/HBox2/Panel1/VBoxContainer2"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 262.0
margin_right = 828.0
margin_bottom = 272.0
rect_min_size = Vector2( 0, 10 )

[node name="Label" type="Label" parent="VBox1/HBox2/Panel1/VBoxContainer2"]
margin_top = 276.0
margin_right = 828.0
margin_bottom = 290.0
text = "Custom Values"
align = 1
valign = 1

[node name="Scroll1" type="ScrollContainer" parent="VBox1/HBox2/Panel1/VBoxContainer2"]
margin_top = 294.0
margin_right = 828.0
margin_bottom = 544.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBox1" type="HBoxContainer" parent="VBox1/HBox2/Panel1/VBoxContainer2/Scroll1"]
margin_right = 816.0
margin_bottom = 518.0
size_flags_horizontal = 3

[node name="VBox1" parent="VBox1/HBox2/Panel1/VBoxContainer2/Scroll1/HBox1" instance=ExtResource( 10 )]
margin_top = 0.0
margin_right = 401.0
margin_bottom = 518.0
size_flags_vertical = 1

[node name="Panel" type="Panel" parent="VBox1/HBox2/Panel1/VBoxContainer2/Scroll1/HBox1"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 405.0
margin_right = 410.0
margin_bottom = 518.0
rect_min_size = Vector2( 5, 0 )

[node name="VBox2" parent="VBox1/HBox2/Panel1/VBoxContainer2/Scroll1/HBox1" instance=ExtResource( 10 )]
margin_left = 414.0
margin_top = 0.0
margin_right = 816.0
margin_bottom = 518.0

[node name="Hbox3" type="HBoxContainer" parent="VBox1"]
margin_top = 586.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="VBox1/Hbox3"]
margin_left = 320.0
margin_right = 704.0
margin_bottom = 14.0
text = "Awesome Unicorn 3 Database Creator Version Pre-Alpha 0.1"
align = 1
valign = 1

[node name="Popups" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 500, 250 )
color = Color( 1, 1, 1, 0.411765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="popup_delete_confirm" type="Popup" parent="Popups"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.5
margin_top = -50.0
margin_right = 116.5
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="ColorRect" parent="Popups/popup_delete_confirm"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Popups/popup_delete_confirm/PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer"]
margin_right = 233.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Are you sure you want to delete %?"
align = 1
valign = 1
autowrap = true

[node name="Label2" type="Label" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer"]
visible = false
margin_right = 271.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Are you sure you want to delete %?"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 233.0
margin_bottom = 100.0

[node name="Accept" type="Button" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 114.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Accept"

[node name="Cancel" type="Button" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 118.0
margin_right = 233.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Cancel"

[node name="FileDialog" type="FileDialog" parent="Popups"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -338.0
margin_top = -187.5
margin_right = 338.0
margin_bottom = 187.5
rect_min_size = Vector2( 255, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
popup_exclusive = true
window_title = "Open a File"
resizable = true
dialog_text = "Select Icon file"
dialog_hide_on_ok = true
mode = 0
access = 2
filters = PoolStringArray( "*.png" )
current_dir = "/Users/iamdj/OneDrive/Desktop/Godot Files/DBManager/addons/Database_Manager/Data/Icons"
current_path = "/Users/iamdj/OneDrive/Desktop/Godot Files/DBManager/addons/Database_Manager/Data/Icons/"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="visibility_changed" from="." to="." method="_on_Inventory_Manager_visibility_changed"]
[connection signal="button_up" from="VBox1/HBox1/SaveChanges" to="." method="_on_Save_button_up"]
[connection signal="button_up" from="VBox1/HBox1/SaveNewItem" to="." method="_on_SaveNewItem_button_up"]
[connection signal="button_up" from="VBox1/HBox1/AddNewItem" to="." method="_on_AddNewItem_button_up"]
[connection signal="button_up" from="VBox1/HBox1/DeleteSelectedItem" to="." method="_on_DeleteSelectedItem_button_up"]
[connection signal="button_up" from="VBox1/HBox1/Cancel" to="." method="_on_Cancel_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Chode" to="VBox1/HBox2/Scroll1/Table_Buttons/Chode" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Gumball" to="VBox1/HBox2/Scroll1/Table_Buttons/Gumball" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/CrappySword" to="VBox1/HBox2/Scroll1/Table_Buttons/CrappySword" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Fist" to="VBox1/HBox2/Scroll1/Table_Buttons/Fist" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Frank'sSpecialSauce2" to="VBox1/HBox2/Scroll1/Table_Buttons/Frank'sSpecialSauce2" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/FireBall" to="VBox1/HBox2/Scroll1/Table_Buttons/FireBall" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Shizzo_Can" to="VBox1/HBox2/Scroll1/Table_Buttons/Shizzo_Can" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Treasure_Chest" to="VBox1/HBox2/Scroll1/Table_Buttons/Treasure_Chest" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Medium_Box" to="VBox1/HBox2/Scroll1/Table_Buttons/Medium_Box" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Sauce_Container" to="VBox1/HBox2/Scroll1/Table_Buttons/Sauce_Container" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Book" to="VBox1/HBox2/Scroll1/Table_Buttons/Book" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Rock" to="VBox1/HBox2/Scroll1/Table_Buttons/Rock" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Trash_Can" to="VBox1/HBox2/Scroll1/Table_Buttons/Trash_Can" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Mike'sCellPhone" to="VBox1/HBox2/Scroll1/Table_Buttons/Mike'sCellPhone" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/LightBulb" to="VBox1/HBox2/Scroll1/Table_Buttons/LightBulb" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/GlassShards" to="VBox1/HBox2/Scroll1/Table_Buttons/GlassShards" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/WeddingRing" to="VBox1/HBox2/Scroll1/Table_Buttons/WeddingRing" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/FlatBottomFlask" to="VBox1/HBox2/Scroll1/Table_Buttons/FlatBottomFlask" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/GlassBeaker" to="VBox1/HBox2/Scroll1/Table_Buttons/GlassBeaker" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/GlassCup" to="VBox1/HBox2/Scroll1/Table_Buttons/GlassCup" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/RoundBottomFlask" to="VBox1/HBox2/Scroll1/Table_Buttons/RoundBottomFlask" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/WildShroom" to="VBox1/HBox2/Scroll1/Table_Buttons/WildShroom" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/StickyAluminum" to="VBox1/HBox2/Scroll1/Table_Buttons/StickyAluminum" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Default4" to="VBox1/HBox2/Scroll1/Table_Buttons/Default4" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Default5" to="VBox1/HBox2/Scroll1/Table_Buttons/Default5" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Default7" to="VBox1/HBox2/Scroll1/Table_Buttons/Default7" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Default8" to="VBox1/HBox2/Scroll1/Table_Buttons/Default8" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Default11" to="VBox1/HBox2/Scroll1/Table_Buttons/Default11" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Default15" to="VBox1/HBox2/Scroll1/Table_Buttons/Default15" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Default16" to="VBox1/HBox2/Scroll1/Table_Buttons/Default16" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Default2" to="VBox1/HBox2/Scroll1/Table_Buttons/Default2" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Default18" to="VBox1/HBox2/Scroll1/Table_Buttons/Default18" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Scroll1/Table_Buttons/Default20" to="VBox1/HBox2/Scroll1/Table_Buttons/Default20" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer/Accept" to="." method="_on_deletePopup_Accept_button_up"]
[connection signal="button_up" from="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on__deletePopup_Cancel_button_up"]
[connection signal="file_selected" from="Popups/FileDialog" to="." method="_on_FileDialog_file_selected"]

[editable path="VBox1/HBox2/Panel1/VBoxContainer2/HBox1/VBox1/Cost"]
[editable path="VBox1/HBox2/Panel1/VBoxContainer2/HBox1/VBox1/CanSell"]
[editable path="VBox1/HBox2/Panel1/VBoxContainer2/HBox1/VBox2/IconPath"]
